loki/loki-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
      release: loki
  serviceName: loki-headless
  template:
    metadata:
      labels:
        app: loki
        release: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.6.1
        args:
        - -config.file=/etc/loki/loki.yaml
        ports:
        - containerPort: 3100
          name: http-metrics
        - containerPort: 9095
          name: grpc
        - containerPort: 7946
          name: memberlist-port
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /data/loki   # <-- FIXED HERE
      volumes:
      - name: config
        secret:
          secretName: loki
      - name: storage
        emptyDir: {}
