loki/loki-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 3100
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
