loki/loki-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-lb
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
