loki/loki-memberlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-memberlist
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: http
    port: 7946
    targetPort: memberlist-port
  selector:
    app: loki
    release: loki
