loki/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  ports:
  - name: http-metrics
    port: 3100
    targetPort: http-metrics
  selector:
    app: loki
    release: loki
  type: ClusterIP
