loki/loki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki
spec:
  type: LoadBalancer
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
